# psi-io

./: .gitignore  README.md  README.rst  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
docs/source/guide/: installation.rst  overview.rst
examples/: GALLERY_HEADER.rst
examples/01_getting_started/: p01_reading_an_hdf5_file.py
examples/01_reading_files/: GALLERY_HEADER.rst  p01_reading_file_meta_data.py  p02_reading_full_datasets.py  p03_reading_slices_of_datasets.py  p04_interpolating_datasets.py
examples/02_writing_files/: GALLERY_HEADER.rst  p01_writing_simple_datasets.py  p02_writing_datasets_with_attributes.py  p03_converting_between_formats.py  p04_annotating_and_converting_br.py
examples/03_mhd_io/: GALLERY_HEADER.rst  p01_psidata_intro.py  p01_quickstart.py  p02_inspecting_metadata.py  p02_psidata_reading.py  p03_reading_and_slicing.py  p04_writing_custom_fields.py
psi_io/: __init__.py  _mesh.py  _models.py  _props.py  _units.py  data.py  hdfreader.py  mesh.py  mhd_io.py  models.py  psi_io.py  units.py
psidata/: __init__.py  hdfreader.py  psi_io.py  psihdf.py
psidata/tests/: tests.py
tests/: conftest.py  utils.py
tests/bench/: test_benchmark_functions.py
tests/psi_io/: test_read_hdf_meta.py
tests/test_psi_io/: test_read_hdf_meta.py  test_read_rtp_meta.py
tests/unit/: test_base_functions.py  test_mesh.py  test_mesh_units.py  test_mhd_io.py  test_models.py  test_props_mhd_helpers.py  test_units.py
